@@ -150,3 +150,5 @@ useDynLib(gert,R_git_tag_create)
 useDynLib(gert,R_git_tag_delete)
 useDynLib(gert,R_git_tag_list)
 useDynLib(gert,R_libgit2_config)
+useDynLib(gert,R_set_cert_locations)
+useDynLib(gert,R_static_libgit2)
